# ggdt

./: Cargo.toml  README.md  rust-toolchain.toml
examples/audio_playback/: Cargo.toml  README.md
examples/audio_playback/src/: main.rs
examples/balls/: Cargo.toml  README.md
examples/balls/src/: main.rs
examples/balls_v2/: Cargo.toml  README.md
examples/balls_v2/assets/: balls.pcx
examples/balls_v2/src/: entities.rs  main.rs  states.rs
examples/imgui_integration/: Cargo.toml  README.md
examples/imgui_integration/assets/: green_slime.pcx  orange_slime.pcx  (+1 more)
examples/slimed/: Cargo.toml  README.md
examples/slimed/assets/: arena.map.json  blue_slime.pcx  db16.pal  fist.pcx  hero_female.pcx  hero_male.pcx  items.pcx  particles.pcx  sword.pcx  title_screen.map.json  ui.pcx
examples/slimed/src/: main.rs  states.rs  support.rs  tilemap.rs
examples/slimed/src/entities/: events.rs  mod.rs  systems.rs
examples/template_complicated/: Cargo.toml  README.md
examples/template_minimal/: Cargo.toml  README.md
examples/variable_screen_size/: Cargo.toml
ggdt/: Cargo.toml  recreate_ref_test_images.sh
ggdt/benches/: bitmap.rs  blit.rs  loading.rs  primitives.rs  triangles.rs
ggdt/src/: lib.rs  prelude.rs
ggdt/src/audio/: device.rs  mod.rs  prelude.rs  queue.rs
ggdt/src/audio/buffer/: mod.rs  wav.rs
ggdt/src/base/: mod.rs
ggdt/src/entities/: mod.rs
ggdt/src/events/: mod.rs
ggdt/src/graphics/: basicimage.rs  bitmap.rs  bitmapatlas.rs  blendmap.rs  color.rs  font.rs  mod.rs  palette.rs  prelude.rs
ggdt/src/graphics/bitmap/: blit.rs  general.rs  gif.rs  iff.rs  mod.rs  pcx.rs  png.rs  primitives.rs  triangles.rs
ggdt/src/graphics/bitmap/indexed/: blit.rs  mod.rs  primitives.rs  triangles.rs
ggdt/src/graphics/bitmap/rgb/: blit.rs  mod.rs  primitives.rs  triangles.rs
ggdt/src/graphics/indexed/: bitmapatlas.rs  blendmap.rs  font.rs  mod.rs  palette.rs  prelude.rs
ggdt/src/graphics/indexed/bitmap/: blit.rs  gif.rs  iff.rs  mod.rs  pcx.rs  primitives.rs
ggdt/src/graphics/rgb/: mod.rs  prelude.rs
ggdt/src/math/: circle.rs  matrix3x3.rs  mod.rs  prelude.rs  rect.rs  vector2.rs
ggdt/src/states/: mod.rs
ggdt/src/system/: event.rs  framebuffer.rs  mod.rs  prelude.rs
ggdt/src/system/input_devices/: mod.rs
ggdt/src/system/input_devices/keyboard/: codes.rs  mod.rs  scancodes.rs
ggdt/src/system/input_devices/mouse/: buttons.rs  cursor.rs  mod.rs
ggdt/src/system/res/: dos_like.rs  mod.rs  standard.rs
ggdt/src/utils/: io.rs  lzwgif.rs  mod.rs  packbits.rs  prelude.rs
ggdt/test-assets/: test.blendmap  test_ilbm.lbm  texture.lbm
ggdt/test-assets/font/: vga.fnt
ggdt/test-assets/iff/: large_1.lbm  large_1.pbm
ggdt/test-assets/pcx/: large_2.pcx
ggdt/tests/: graphics.rs  graphics_indexed.rs  graphics_rgba.rs  helpers.rs
ggdt/tests/manual/: keyboard.rs  main.rs  mouse.rs  system_events.rs  system_resources_doslike.rs  system_resources_standard.rs
ggdt/tests/ref/: blended_rotozoom_blits.pcx  blended_solid_blits.pcx  line_drawing.pcx  pixel_addressing.pcx  rotozoom_transparent_blits.pcx  rotozoom_transparent_offset_blits.pcx  text_drawing.pcx  transparent_blits.pcx
ggdt/tests/ref/indexed/: blended_rect_drawing.pcx  horiz_line_drawing.pcx  rotozoom_offset_blits.pcx  solid_blits.pcx  solid_flipped_offset_blits.pcx  transparent_flipped_blits.pcx  vert_line_drawing.pcx
ggdt_imgui/: Cargo.toml
ggdt_imgui/src/: lib.rs  platform.rs  renderer.rs
libretrogd/: Cargo.toml
libretrogd/benches/: bitmap.rs  blit.rs  loading.rs
libretrogd/src/: lib.rs
libretrogd/src/audio/: device.rs  mod.rs  queue.rs  wav.rs
libretrogd/src/audio/buffer/: mod.rs  wav.rs
libretrogd/src/base/: mod.rs
libretrogd/src/entities/: mod.rs
libretrogd/src/events/: mod.rs
libretrogd/src/graphics/: bitmapatlas.rs  blendmap.rs  font.rs  mod.rs  palette.rs
libretrogd/src/graphics/bitmap/: blit.rs  gif.rs  iff.rs  mod.rs  pcx.rs  primitives.rs
libretrogd/src/math/: circle.rs  matrix3x3.rs  mod.rs  rect.rs  vector2.rs
libretrogd/src/states/: mod.rs
libretrogd/src/system/: event.rs  mod.rs
libretrogd/src/system/input_devices/: keyboard.rs  mod.rs  mouse.rs
libretrogd/src/system/input_devices/keyboard/: codes.rs  mod.rs  scancodes.rs
libretrogd/src/system/input_devices/mouse/: buttons.rs  mod.rs
libretrogd/src/utils/: bytes.rs  io.rs  lzw.rs  lzwgif.rs  mod.rs  packbits.rs
libretrogd/test-assets/: test.pcx  test_ilbm_image2.lbm  test_image.lbm  test_pbm.lbm
libretrogd/tests/: graphics.rs
libretrogd/tests/ref/: blended_filled_rect_drawing.pcx  blended_horiz_line_drawing.pcx  blended_line_drawing.pcx  blended_pixel_drawing.pcx  blended_rotozoom_blits.pcx  blended_rotozoom_transparent_blits.pcx  blended_solid_flipped_blits.pcx  blended_transparent_blits.pcx  blended_transparent_flipped_blits.pcx  blended_vert_line_drawing.pcx  circle_drawing.pcx  filled_circle_drawing.pcx  filled_rect_drawing.pcx  pixel_drawing.pcx  rect_drawing.pcx  rotozoom_blits.pcx  rotozoom_offset_blits.pcx  rotozoom_transparent_blits.pcx  rotozoom_transparent_offset_blits.pcx  solid_flipped_blits.pcx  solid_offset_blits.pcx  transparent_flipped_offset_blits.pcx  transparent_flipped_single_blits.pcx  transparent_offset_blits.pcx  transparent_single_blits.pcx
(+8 files in other folders)
