[workspace]
members = [
    "ggdt",
    "examples/*",
]

# some stuff is becoming noticably slow with default dev profile settings (opt-level = 0). especially any of the
# fancier triangle_2d drawing stuff. while there are many optimizations still left to be made, it seems like a good
# compromise on build time vs optimizations to keep opt-level at 1 while actively developing.
[profile.dev]
opt-level = 1