[package]
name = "ggdt"
description = "Gered's Game Dev Tools. A strictly for-fun, retro-style game dev set of tools and other code to help with my own projects."
version = "0.1.0"
authors = ["Gered King <gered@blarg.ca>"]
edition = "2021"

[dependencies]
byte-slice-cast = "1.2.1"
byteorder = "1.4.3"
thiserror = "=1.0.30"
rand = "0.8.5"
num-traits = "0.2.14"
bitflags = "2.0.2"
flate2 = "1.0.25"
crc32fast = "1.3.2"

[target.'cfg(not(windows))'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2/", rev = "819ab438ac971a922d6ee1da558822002d343b4e", features = ["static-link", "bundled", "use-pkgconfig", "unsafe_textures"] }

[target.'cfg(windows)'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2/", rev = "819ab438ac971a922d6ee1da558822002d343b4e", features = ["unsafe_textures"] }

[dev-dependencies]
claim = "0.5.0"
criterion = "0.4.0"
anyhow = "=1.0.55"
tempfile = "3.4.0"

[[bench]]
name = "bitmap"
harness = false

[[bench]]
name = "blit"
harness = false

[[bench]]
name = "loading"
harness = false

[[bench]]
name = "triangles"
harness = false
