[package]
name = "ggdt"
description = "Gered's Game Dev Tools. A strictly for-fun, retro-style game dev set of tools and other code to help with my own projects."
version = "0.1.0"
authors = ["Gered King <gered@blarg.ca>"]
edition = "2021"

[dependencies]
byte-slice-cast = "1.2.2"
byteorder = "1.5.0"
thiserror = "=1.0.50"
rand = "0.8.5"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
bitflags = "2.4.1"
flate2 = "=1.0.27"
crc32fast = "1.3.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[target.'cfg(not(windows))'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2/", rev = "819ab438ac971a922d6ee1da558822002d343b4e", features = ["static-link", "bundled", "use-pkgconfig", "unsafe_textures"] }

[target.'cfg(windows)'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2/", rev = "819ab438ac971a922d6ee1da558822002d343b4e", features = ["unsafe_textures"] }

[dev-dependencies]
claim = "0.5.0"
criterion = "0.5.1"
anyhow = "=1.0.75"
tempfile = "3.8.1"

[[bench]]
name = "bitmap"
harness = false

[[bench]]
name = "blit"
harness = false

[[bench]]
name = "loading"
harness = false

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "triangles"
harness = false
