[package]
name = "ggdt_imgui"
description = "ImGui backend for ggdt."
version = "0.1.0"
authors = ["Gered King <gered@blarg.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggdt = { path = "../ggdt" }
imgui = { version = "0.11.0", features = ["docking"] }
thiserror = "=1.0.30"
