[package]
name = "slimed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.55"
libretrogd = { path = "../../libretrogd", features = [] }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2/", rev = "819ab438ac971a922d6ee1da558822002d343b4e", features = ["static-link", "bundled", "use-pkgconfig", "unsafe_textures"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

